--- a/_config.yml
+++ b/_config.yml
@@ -11,25 +11,25 @@ asciidoctor:
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#site-author
 author:
-  avatar: /assets/images/avatar.png # FIXME Replace with your avatar.
-  bio: I are programmer. I make computer beep boop beep beep boop. # FIXME Replace with your bio.
-  github: # FIXME Add your GitHub username or remove this line.
-  linkedin: # FIXME Add your Linkedin username or remove this line.
-  location: Earth, Milky Way # FIXME Replace with your location or remove this line.
-  name: John Doe # FIXME Replace with your name.
+  avatar: /assets/images/avatar.png
+  bio: Senior Software Engineer/Craftsman experienced in Java/Kotlin
+  github: PoisonedYouth
+  linkedin: https://www.linkedin.com/in/matthias-schenk-7b7586143
+  location: Germany, Freiburg
+  name: Matthias Schenk
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#giscus-comments
 comments:
   giscus:
-    category_name:
-    category_id:
+    category_name: Announcements
+    category_id: DIC_kwDOMmeTc84Ch62-
     discussion_term: "og:title"
     reactions_enabled: "1"
-    repo_id:
-    theme: light
+    repo_id: R_kgDOMmeTcw
+    theme: dark
   provider: giscus
 
-copyright: John Doe # FIXME Replace with your name or anything that makes sense. This will appear in the blog footer.
+copyright: Matthias Schenk
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#front-matter-defaults
 defaults:
@@ -39,13 +39,13 @@ defaults:
     values:
       author_profile: true
       classes: wide
-      comments: false
+      comments: true
       layout: single
       related: true
       share: true
       show_date: true
 
-description: John Doe's blog # FIXME Replace with your blog description. This is only used in the blog HTML meta tags.
+description: PoisonedYouth TechBlog - Software Engineering, Kotlin & more
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#code-block-copy-button
 enable_copy_code_button: true
@@ -57,20 +57,20 @@ footer:
   links:
     - label: GitHub
       icon: fab fa-fw fa-github
-      url: https://github.com/ # FIXME Replace with a link pointing to your GitHub profile (e.g. https://github.com/gwenneg) or remove this item.
+      url: https://github.com/PoisonedYouth
     - label: Linkedin
       icon: fab fa-fw fa-linkedin
-      url: https://www.linkedin.com/in/ # FIXME Replace with a link pointing to your Linkedin profile (e.g. https://www.linkedin.com/in/gwenneg) or remove this item.
+      url:
 
-locale: en-US
+locale: de-de
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#skin
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dark
 
 remote_theme: mmistakes/minimal-mistakes@4.26.2
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#site-repository
-repository: # FIXME Add your GitHub repository full name (e.g. gwenneg/blog-jekyll-asciidoc-template).
+repository: PoisonedYouth/PoisonedYouth.github.io
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#site-search
 search: true
@@ -78,7 +78,7 @@ search: true
 show_excerpts: true
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#site-subtitle
-subtitle: The newest blog ever. # FIXME Replace with your blog subtitle (optional).
+subtitle: Software Engineering, Kotlin & more
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#archive-settings
 tag_archive:
@@ -86,6 +86,6 @@ tag_archive:
   path: /tags/
 
 # See https://mmistakes.github.io/minimal-mistakes/docs/configuration/#site-title
-title: John Doe's blog # FIXME Replace with your blog title.
+title: PoisonedYouth TechBlog
 
-url: # FIXME Add your blog URL (e.g. https://gwenneg.github.io).
+url: https://poisonedyouth.github.io
